--- a/package.json
+++ b/package.json
@@ -8,20 +8,30 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "lambda": "esbuild ./lib/edge-function/handler.ts --bundle --outfile=./lib/edge-function/handler.js --platform=node --target=node14 --minify"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.109.0",
+    "@aws-cdk/aws-cloudfront": "1.109.0",
+    "@aws-cdk/aws-dynamodb": "1.109.0",
+    "@aws-cdk/aws-lambda": "1.109.0",
+    "@types/aws-lambda": "8.10.77",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.109.0",
+    "esbuild": "0.12.9",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.109.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-cloudfront-origins": "1.109.0",
+    "@aws-cdk/aws-s3": "1.109.0",
     "@aws-cdk/core": "1.109.0",
+    "aws-sdk": "2.931.0",
+    "axios": "0.21.1",
     "source-map-support": "^0.5.16"
   }
 }
